--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-
 	//test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
@@ -37,6 +36,9 @@ dependencies {
 
 	//h2
 	runtimeOnly 'com.h2database:h2'
+
+	//guava
+	implementation("com.google.guava:guava:32.1.2-jre")
 
 
 }
