docs)restApi Docs

--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,11 @@ asciidoctor {
 	inputs.dir snippetsDir
 	configurations 'asciidoctorExt'
 
+	sources {
+		include("**index.adoc")
+	}
+
+	baseDirFollowsSourceFile()
 	dependsOn test
 }
 
